MET landing page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,15 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "blocks/blocks";
 
-body {
-  background: $c-gray;
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: "Cinzel", serif;
+  font-weight: 400;
+  color: $dark-accent;
+  scroll-behavior: smooth;
 }
