--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,21 @@
-$c-gray: #eee;
+/* colors */
+$gray: #e5e5e5;
+$main-accent: #d12d35;
+$dark-accent: #161616;
+$hover-color: #ae1c23;
+$press-color: #eb343d;
+$placeholder-color: #7e7e83;
+
+/* transitions */
+$transition-duration: 0.5s;
+
+/* layouts */
+$max-content-width: 1260px;
+$desktop-paddingX: 120px;
+$tablet-paddingX: 72px;
+$mobile-paddingX: 20px;
+$tablet-breakpoint: 1023px;
+$mobile-breakpoint: 500px;
+$grid-gap-desktop: 24px;
+$grid-gap-tablet: 24px;
+$grid-gap-mobile: 20px;
